--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "jest"
   },
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/clauprudente/on21-imersao-js-S12-Projeto-Muda-Sampa.git"
@@ -18,10 +18,6 @@
   },
   "homepage": "https://github.com/clauprudente/on21-imersao-js-S12-Projeto-Muda-Sampa#readme",
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "babel-jest": "^29.2.2",
     "jest": "^29.3.1"
   },
   "dependencies": {
